src/objects/QQNAILookup__c.object
<CustomObject>
    <description>Look up assigned values for enumerable fields.</description>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>字段名</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue__c</fullName>
        <label>字段値</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TableName__c</fullName>
        <label>オブジェクト名</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranslatedValue__c</fullName>
        <label>RowNo.</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>QQNAILookup</label>
    <nameField>
        <displayFormat>AIL-{00000000}</displayFormat>
        <label>AILookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>